--- a/AutoBuyer/AutoBuyer/MainWindow.xaml
+++ b/AutoBuyer/AutoBuyer/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AutoBuyer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Closed="Window_Closed">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="259,149,0,0" VerticalAlignment="Top"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="259,149,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Button Content="Button2" HorizontalAlignment="Left" Margin="332,149,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>
+        <Button Content="66666" HorizontalAlignment="Left" Margin="259,192,0,0" VerticalAlignment="Top" Click="Button_Click_2"/>
     </Grid>
 </Window>
